Added Event Emitters and Output and Input comm across component very imp for learning how to pass data from one component to other component and how to listner to data emit.

--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "AgularAppFE"
+    }
+  },
+  "defaultProject": "AgularAppFE",
+  "cli": {
+    "analytics": "eb35f58e-d4f6-4d35-a912-738e56133e16"
+  }
 }
